--- a/qtBuildSystem/Mu/hexviewer.ui
+++ b/qtBuildSystem/Mu/hexviewer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>467</width>
-    <height>350</height>
+    <width>515</width>
+    <height>372</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -50,9 +50,9 @@
      <widget class="QPushButton" name="hexUpdate">
       <property name="geometry">
        <rect>
-        <x>320</x>
-        <y>250</y>
-        <width>113</width>
+        <x>260</x>
+        <y>210</y>
+        <width>201</width>
         <height>32</height>
        </rect>
       </property>
@@ -158,9 +158,9 @@
      <widget class="QPushButton" name="hexDump">
       <property name="geometry">
        <rect>
-        <x>272</x>
-        <y>180</y>
-        <width>161</width>
+        <x>260</x>
+        <y>190</y>
+        <width>201</width>
         <height>32</height>
        </rect>
       </property>
@@ -189,6 +189,19 @@
       </property>
       <property name="text">
        <string>File Path</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="hexShowRegisters">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>230</y>
+        <width>201</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Show Registers</string>
       </property>
      </widget>
     </widget>
