--- a/qtBuildSystem/Mu/hexviewer.ui
+++ b/qtBuildSystem/Mu/hexviewer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>515</width>
-    <height>372</height>
+    <width>661</width>
+    <height>428</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -50,7 +50,7 @@
      <widget class="QPushButton" name="hexUpdate">
       <property name="geometry">
        <rect>
-        <x>260</x>
+        <x>420</x>
         <y>210</y>
         <width>201</width>
         <height>32</height>
@@ -63,7 +63,7 @@
      <widget class="QLineEdit" name="hexAddress">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>430</x>
         <y>30</y>
         <width>113</width>
         <height>21</height>
@@ -73,7 +73,7 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>430</x>
         <y>10</y>
         <width>60</width>
         <height>16</height>
@@ -86,7 +86,7 @@
      <widget class="QRadioButton" name="hex8Bit">
       <property name="geometry">
        <rect>
-        <x>260</x>
+        <x>420</x>
         <y>60</y>
         <width>51</width>
         <height>20</height>
@@ -99,7 +99,7 @@
      <widget class="QRadioButton" name="hex16Bit">
       <property name="geometry">
        <rect>
-        <x>320</x>
+        <x>480</x>
         <y>60</y>
         <width>51</width>
         <height>20</height>
@@ -112,7 +112,7 @@
      <widget class="QRadioButton" name="hex32Bit">
       <property name="geometry">
        <rect>
-        <x>380</x>
+        <x>540</x>
         <y>60</y>
         <width>61</width>
         <height>20</height>
@@ -125,7 +125,7 @@
      <widget class="QLineEdit" name="hexLength">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>430</x>
         <y>110</y>
         <width>113</width>
         <height>21</height>
@@ -135,7 +135,7 @@
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>430</x>
         <y>90</y>
         <width>60</width>
         <height>16</height>
@@ -148,17 +148,17 @@
      <widget class="QListWidget" name="hexValueList">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>10</x>
         <y>0</y>
-        <width>251</width>
-        <height>281</height>
+        <width>401</width>
+        <height>341</height>
        </rect>
       </property>
      </widget>
      <widget class="QPushButton" name="hexDump">
       <property name="geometry">
        <rect>
-        <x>260</x>
+        <x>420</x>
         <y>190</y>
         <width>201</width>
         <height>32</height>
@@ -171,7 +171,7 @@
      <widget class="QLineEdit" name="hexFilePath">
       <property name="geometry">
        <rect>
-        <x>272</x>
+        <x>432</x>
         <y>160</y>
         <width>161</width>
         <height>21</height>
@@ -181,7 +181,7 @@
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>430</x>
         <y>140</y>
         <width>60</width>
         <height>16</height>
@@ -194,7 +194,7 @@
      <widget class="QPushButton" name="hexShowRegisters">
       <property name="geometry">
        <rect>
-        <x>260</x>
+        <x>420</x>
         <y>230</y>
         <width>201</width>
         <height>32</height>
@@ -202,6 +202,32 @@
       </property>
       <property name="text">
        <string>Show Registers</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="hexPrintDebugLogs">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>250</y>
+        <width>201</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Print Debug Logs</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="hexEraseDebugLogs">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>270</y>
+        <width>201</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Erase Debug Logs</string>
       </property>
      </widget>
     </widget>
