--- a/qtBuildSystem/Mu/mainwindow.ui
+++ b/qtBuildSystem/Mu/mainwindow.ui
@@ -263,7 +263,7 @@
         </widget>
        </item>
        <item row="0" column="7">
-        <widget class="QPushButton" name="hexViewer">
+        <widget class="QPushButton" name="debugger">
          <property name="enabled">
           <bool>true</bool>
          </property>
