Make touch input activate(it still dosent work, but it does activate :) ) without pushing the up button
Also fix some reported bugs.

--- a/qtBuildSystem/Mu/mainwindow.qrc
+++ b/qtBuildSystem/Mu/mainwindow.qrc
@@ -7,7 +7,7 @@
         <file>images/notes.png</file>
         <file>images/power.png</file>
         <file>images/right.png</file>
-        <file>images/toDo.png</file>
+        <file>images/todo.png</file>
         <file>images/up.png</file>
         <file>images/pause.png</file>
         <file>images/play.png</file>
